--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             display: flex;
             flex-direction: column;
             height: 100vh;
+            padding: 10px;
         }
 
         #streamSection {
@@ -30,14 +31,14 @@
         }
 
         #videoContainer {
-            width: 80%;
-            max-width: 600px;
+            width: 100%;
+            max-width: 100%;
             border: 2px solid #ccc;
             border-radius: 10px;
             overflow: hidden;
             margin-bottom: 20px;
             background: black;
-            height: 300px;
+            height: 200px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -50,7 +51,7 @@
         }
 
         #commentSection {
-            width: 80%;
+            width: 100%;
             max-width: 600px;
             background: #fff;
             border-top: 1px solid #ddd;
@@ -83,14 +84,15 @@
 
         #commentInputContainer {
             display: flex;
+            flex-direction: column;
             gap: 10px;
-            align-items: center;
+            align-items: stretch;
         }
 
         #commentInput,
         #usernameInput,
         #passwordInput {
-            flex-grow: 1;
+            width: 100%;
             height: 40px;
             border: 1px solid #ccc;
             border-radius: 8px;
@@ -115,6 +117,28 @@
 
         #startStreamButton {
             margin-bottom: 10px;
+        }
+
+        /* Media Queries for Responsiveness */
+        @media (min-width: 768px) {
+            #videoContainer {
+                width: 80%;
+                height: 300px;
+            }
+        }
+
+        @media (max-width: 600px) {
+            #videoContainer {
+                height: 200px;
+            }
+
+            #startStreamButton {
+                width: 100%;
+            }
+
+            #commentInputContainer {
+                flex-direction: column;
+            }
         }
     </style>
 </head>
